objects/ASI_MFM_Route_Rule_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_MFM_Route_Rule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_HKD__c</fullName>
        <formula>ASI_MFM_Route_Type__r.ASI_MFM_EUR_rate__c * ASI_MFM_Minimum_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Minimum_Amount__c</fullName>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBKK Inner</fullName>
                </value>
                <value>
                    <fullName>GBKK Outer</fullName>
                </value>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>STH</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>Lead BMC</fullName>
                </value>
                <value>
                    <fullName>Classic BMC</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>GBKK Prestige</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Wine/PP</fullName>
                </value>
                <value>
                    <fullName>North Asia (TR APAC)</fullName>
                </value>
                <value>
                    <fullName>South East Asia (TR APAC)</fullName>
                </value>
                <value>
                    <fullName>India (TR APAC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Route_Type__c</fullName>
        <label>Route Type</label>
        <referenceTo>ASI_MFM_Route_Type__c</referenceTo>
        <relationshipLabel>ASI MFM Route Rule Details</relationshipLabel>
        <relationshipName>ASI_MFM_Route_Rule_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sequence__c</fullName>
        <inlineHelpText>control sequence of approver if minimum amount is identical</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Type__c</fullName>
        <label>Type (TR use only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Bracket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASI MFM Route Rule Detail</label>
    <nameField>
        <displayFormat>RRD{0000}</displayFormat>
        <label>Rule Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Route Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>